# cards-mvp

./: LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yaml  pyproject.toml
backend/: main.py
backend/app/: container.py  dependencies.py  lifespan.py  main.py  middlewares.py
backend/app/logging/: config.py  context.py  extra_fileds_filter.py  request_id_filter.py
backend/application/: errors.py
backend/application/create_session/: command.py  use_case.py
backend/application/get_result/: query.py  result.py  use_case.py
backend/application/get_topic/: prewarm_use_case.py  query.py  use_case.py
backend/application/join_session/: command.py  use_case.py
backend/application/ports/: result_repository.py
backend/application/submit_answers/: command.py  result.py  use_case.py
backend/domain/result/: calculator.py  entities.py
backend/domain/session/: entities.py  errors.py  repository.py  value_objects.py
backend/domain/topic/: entities.py  repository.py  value_objects.py
backend/infrastructure/rate_limit/: redis_rate_limiter.py
backend/infrastructure/redis/: client.py  result_repository.py  serializers.py  sessions_repository.py
backend/infrastructure/sessions/: result_repository.py  serializers.py  sessions_repository.py
backend/infrastructure/topics/redis/: repository.py  serializers.py
backend/infrastructure/topics/yaml/: repository.py  serializers.py
backend/interfaces/http/: api.py  exception_handlers.py
tests/domain/result/: test_calculator.py
tests/domain/session/: test_entities.py
topics_example/: music.yaml
(+6 files in other folders)
