[project]
name = "cards-mvp"
version = "0.1.0"
description = "Little mvp"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "orjson>=3.11.5",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "uvicorn>=0.40.0",
]

[tool.ruff]
exclude = [
    ".direnv",
    ".git",
    ".github",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "migrations",
]
line-length = 80
target-version = "py313"

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C4",
    "E",
    "F",
    "I",
    "DJ",
    "INP",
    "TID",
    "UP",
    "YTT",
    "COM",
]
fixable = ["A", "B", "C4", "E", "F", "I", "TID", "UP", "COM"]
unfixable = []
ignore = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
